执行grep命令后显示命令执行成功

--- a/command.conf
+++ b/command.conf
@@ -1,4 +1,9 @@
 [common_command]
-df_command = df -h
-#sar_command = sar 5 10 | tail -n 1 | awk '{print $1,$8'}
+df_command = df -h | awk 'NR > 1 && $5+0 > maxspace {maxspace = $5+0;name = $6} END { print name " has " maxspace"%"} '
 
+[aims_command]
+grep_sys_error_command = grep -i error /var/log/syslog
+grep_sys_warn_command = grep -i warning /var/log/syslog
+
+[ib_command]
+#grep_jboss_warn = grep -i warn /opt/logs/services/jboss.log | grep -v 'null'
